# mpc-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: main.yml
messenger/: Cargo.toml
messenger/src/: main.rs
proto/: mpc.proto  types.proto
scripts/: demo.sh  start.sh  test.sh
secp256k1-id/: Cargo.toml
secp256k1-id/src/: main.rs
src/: cli.rs  coordinator.rs  generated.rs  group.rs  key.rs  keystore.rs  main.rs  message_hub.rs  message_proxy.rs  messages.rs  player.rs  prom.rs  redis.rs  server.rs  signer.rs  transport.rs
src/actors/: aliases.rs  coordinator.rs  messages.rs  mod.rs  msg_utils.rs  player.rs  signer.rs  types.rs
src/api/: types.rs
src/core/: group.rs  mod.rs  payloads.rs  types.rs
src/crypto/: decrypter.rs  eciesext.rs  encrypter.rs  mod.rs
src/pb/: mod.rs  mpc.rs  types.rs
src/storage/: group_store.rs  mod.rs  share_store.rs
src/transport/: common.rs  messenger.rs  mod.rs  redis.rs
src/utils/: mod.rs
src/wire/: types.rs
