[package]
name = "mpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round-based = "0.1.6"
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", branch = "master" }
curv-kzen = { version = "0.9.0", default-features = false }
actix = "0.12.0"
actix-web = "4.0.1"
actix-interop = "0.3.0"
work-queue = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
tokio ="1.17.0"
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0"
structopt ="0.3.26"
futures="0.3.21"
anyhow = "1.0.55"
async-sse = "5"
surf = "2"
oneshot = "0.1.3"
async-stream = "0.3.2"
futures-util = "0.3.21"
