[package]
name = "secp256k1-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt ="0.3.26"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
hex = "0.4.3"
curv-kzen = { version = "0.9", features=["rust-gmp-kzen"] }
sha2 = "0.10.2"
